# voice-attribution-framework

./: .gitignore  01_总体方案与实施计划.md  02_目录结构设计.md  03_数据库与画像库设计.md  04_Embedding后端抽象设计.md  05_打分与拒识策略设计.md  06_Benchmark与报告规范.md  07_开发日志.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
app/: __init__.py
app/audio/: __init__.py  io.py  models.py  quality.py
app/benchmark/: __init__.py  business.py  filesystem.py  manifest.py  models.py  runner.py
app/common/: __init__.py  config.py  constants.py  errors.py
app/embedding_backends/: __init__.py  base.py  ecapa_onnx.py  models.py  registry.py
app/features/: __init__.py  fbank.py  models.py
app/profiles/: __init__.py  builder.py  calibration.py  cohort.py  models.py
app/reporting/: __init__.py  json_summary.py  markdown.py  models.py  tsv.py
app/scoring/: __init__.py  models.py  normalization.py  open_set_gate.py  pipeline.py  reranker.py  similarity.py  strategies.py
app/services/: __init__.py  bootstrap.py  container.py  identification.py
configs/audio/: default.yaml
configs/benchmark/: default.yaml
configs/enrollment_packs/: liaoning0222_xiaoli_best_verified.txt
models/: MODEL_PROVENANCE.md  README.md
scripts/: analyze_confusion_pairs.py  recommend_business_enrollment_pack.py  run_benchmark.py  run_official_liaoning0222_solution.py  scan_business_thresholds.py  search_best_enrollment_combination.py  test_short_calibrated_leader.py
(+18 files in other folders)
