[project]
name = "voice-attribution-framework"
version = "0.1.0"
description = "Business-oriented speaker attribution framework built around ECAPA backbones."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "numpy>=2.0.0",
  "onnxruntime>=1.18.0",
  "soundfile>=0.12.1",
  "torch>=2.2.0",
  "torchaudio>=2.2.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0"]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
